// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Monochrome image generation > using '1x1' raw data scaled by 2 with frameMode 'crop' > generates expected dimensions 1`] = `
{
  "height": 16,
  "width": 16,
}
`;

exports[`Monochrome image generation > using '1x1' raw data scaled by 2 with frameMode 'crop' > generates expected hash for fullParams 1`] = `"XBaXZGeDgd"`;

exports[`Monochrome image generation > using '1x1' raw data scaled by 2 with frameMode 'crop' > generates expected hash for raw image data 1`] = `"jwkXkBq86d"`;

exports[`Monochrome image generation > using '1x1' raw data scaled by 2 with frameMode 'keep' > generates expected dimensions 1`] = `
{
  "height": 16,
  "width": 16,
}
`;

exports[`Monochrome image generation > using '1x1' raw data scaled by 2 with frameMode 'keep' > generates expected hash for fullParams 1`] = `"JAWnl69cG0"`;

exports[`Monochrome image generation > using '1x1' raw data scaled by 2 with frameMode 'keep' > generates expected hash for raw image data 1`] = `"jwkXkBq86d"`;

exports[`Monochrome image generation > using '1x1' raw data scaled by 2 with frameMode 'square_black' > generates expected dimensions 1`] = `
{
  "height": 16,
  "width": 16,
}
`;

exports[`Monochrome image generation > using '1x1' raw data scaled by 2 with frameMode 'square_black' > generates expected hash for fullParams 1`] = `"7gvFmxFMQC"`;

exports[`Monochrome image generation > using '1x1' raw data scaled by 2 with frameMode 'square_black' > generates expected hash for raw image data 1`] = `"jwkXkBq86d"`;

exports[`Monochrome image generation > using '1x1' raw data scaled by 2 with frameMode 'square_white' > generates expected dimensions 1`] = `
{
  "height": 16,
  "width": 16,
}
`;

exports[`Monochrome image generation > using '1x1' raw data scaled by 2 with frameMode 'square_white' > generates expected hash for fullParams 1`] = `"5Sw8LOvIXA"`;

exports[`Monochrome image generation > using '1x1' raw data scaled by 2 with frameMode 'square_white' > generates expected hash for raw image data 1`] = `"jwkXkBq86d"`;

exports[`Monochrome image generation > using '16x14' raw data scaled by 2 with frameMode 'crop' > generates expected dimensions 1`] = `
{
  "height": 224,
  "width": 256,
}
`;

exports[`Monochrome image generation > using '16x14' raw data scaled by 2 with frameMode 'crop' > generates expected hash for fullParams 1`] = `"kYfBjVOyjc"`;

exports[`Monochrome image generation > using '16x14' raw data scaled by 2 with frameMode 'crop' > generates expected hash for raw image data 1`] = `"vVfl7TJX14"`;

exports[`Monochrome image generation > using '16x14' raw data scaled by 2 with frameMode 'keep' > generates expected dimensions 1`] = `
{
  "height": 224,
  "width": 256,
}
`;

exports[`Monochrome image generation > using '16x14' raw data scaled by 2 with frameMode 'keep' > generates expected hash for fullParams 1`] = `"8PotdSIbpa"`;

exports[`Monochrome image generation > using '16x14' raw data scaled by 2 with frameMode 'keep' > generates expected hash for raw image data 1`] = `"vVfl7TJX14"`;

exports[`Monochrome image generation > using '16x14' raw data scaled by 2 with frameMode 'square_black' > generates expected dimensions 1`] = `
{
  "height": 224,
  "width": 256,
}
`;

exports[`Monochrome image generation > using '16x14' raw data scaled by 2 with frameMode 'square_black' > generates expected hash for fullParams 1`] = `"VN6RhGI1zF"`;

exports[`Monochrome image generation > using '16x14' raw data scaled by 2 with frameMode 'square_black' > generates expected hash for raw image data 1`] = `"vVfl7TJX14"`;

exports[`Monochrome image generation > using '16x14' raw data scaled by 2 with frameMode 'square_white' > generates expected dimensions 1`] = `
{
  "height": 224,
  "width": 256,
}
`;

exports[`Monochrome image generation > using '16x14' raw data scaled by 2 with frameMode 'square_white' > generates expected hash for fullParams 1`] = `"KDQf1L4tz6"`;

exports[`Monochrome image generation > using '16x14' raw data scaled by 2 with frameMode 'square_white' > generates expected hash for raw image data 1`] = `"vVfl7TJX14"`;

exports[`Monochrome image generation > using '20x18' raw data scaled by 2 with frameMode 'crop' > generates expected dimensions 1`] = `
{
  "height": 224,
  "width": 256,
}
`;

exports[`Monochrome image generation > using '20x18' raw data scaled by 2 with frameMode 'crop' > generates expected hash for fullParams 1`] = `"EOLAgxkDYj"`;

exports[`Monochrome image generation > using '20x18' raw data scaled by 2 with frameMode 'crop' > generates expected hash for raw image data 1`] = `"vVfl7TJX14"`;

exports[`Monochrome image generation > using '20x18' raw data scaled by 2 with frameMode 'keep' > generates expected dimensions 1`] = `
{
  "height": 288,
  "width": 320,
}
`;

exports[`Monochrome image generation > using '20x18' raw data scaled by 2 with frameMode 'keep' > generates expected hash for fullParams 1`] = `"s8v0vCGop5"`;

exports[`Monochrome image generation > using '20x18' raw data scaled by 2 with frameMode 'keep' > generates expected hash for raw image data 1`] = `"dobrrcznjp"`;

exports[`Monochrome image generation > using '20x18' raw data scaled by 2 with frameMode 'square_black' > generates expected dimensions 1`] = `
{
  "height": 320,
  "width": 320,
}
`;

exports[`Monochrome image generation > using '20x18' raw data scaled by 2 with frameMode 'square_black' > generates expected hash for fullParams 1`] = `"m5UTSTAfdz"`;

exports[`Monochrome image generation > using '20x18' raw data scaled by 2 with frameMode 'square_black' > generates expected hash for raw image data 1`] = `"i3KxHIG14t"`;

exports[`Monochrome image generation > using '20x18' raw data scaled by 2 with frameMode 'square_white' > generates expected dimensions 1`] = `
{
  "height": 320,
  "width": 320,
}
`;

exports[`Monochrome image generation > using '20x18' raw data scaled by 2 with frameMode 'square_white' > generates expected hash for fullParams 1`] = `"Mfa12A5L3l"`;

exports[`Monochrome image generation > using '20x18' raw data scaled by 2 with frameMode 'square_white' > generates expected hash for raw image data 1`] = `"UJzaE6M2OG"`;

exports[`Monochrome image generation > using '20x18_1' raw data scaled by 2 with frameMode 'crop' > generates expected dimensions 1`] = `
{
  "height": 224,
  "width": 256,
}
`;

exports[`Monochrome image generation > using '20x18_1' raw data scaled by 2 with frameMode 'crop' > generates expected hash for fullParams 1`] = `"MqEA0JIyM6"`;

exports[`Monochrome image generation > using '20x18_1' raw data scaled by 2 with frameMode 'crop' > generates expected hash for raw image data 1`] = `"vVfl7TJX14"`;

exports[`Monochrome image generation > using '20x18_1' raw data scaled by 2 with frameMode 'keep' > generates expected dimensions 1`] = `
{
  "height": 288,
  "width": 320,
}
`;

exports[`Monochrome image generation > using '20x18_1' raw data scaled by 2 with frameMode 'keep' > generates expected hash for fullParams 1`] = `"Lv4yltqAae"`;

exports[`Monochrome image generation > using '20x18_1' raw data scaled by 2 with frameMode 'keep' > generates expected hash for raw image data 1`] = `"PotL6pdlaS"`;

exports[`Monochrome image generation > using '20x18_1' raw data scaled by 2 with frameMode 'square_black' > generates expected dimensions 1`] = `
{
  "height": 320,
  "width": 320,
}
`;

exports[`Monochrome image generation > using '20x18_1' raw data scaled by 2 with frameMode 'square_black' > generates expected hash for fullParams 1`] = `"uw0Tj4V2BL"`;

exports[`Monochrome image generation > using '20x18_1' raw data scaled by 2 with frameMode 'square_black' > generates expected hash for raw image data 1`] = `"dVXXCHqej0"`;

exports[`Monochrome image generation > using '20x18_1' raw data scaled by 2 with frameMode 'square_white' > generates expected dimensions 1`] = `
{
  "height": 320,
  "width": 320,
}
`;

exports[`Monochrome image generation > using '20x18_1' raw data scaled by 2 with frameMode 'square_white' > generates expected hash for fullParams 1`] = `"qhvgzRXhQw"`;

exports[`Monochrome image generation > using '20x18_1' raw data scaled by 2 with frameMode 'square_white' > generates expected hash for raw image data 1`] = `"qpDGmjQS58"`;

exports[`Monochrome image generation > using '20x86' raw data scaled by 2 with frameMode 'crop' > generates expected dimensions 1`] = `
{
  "height": 224,
  "width": 256,
}
`;

exports[`Monochrome image generation > using '20x86' raw data scaled by 2 with frameMode 'crop' > generates expected hash for fullParams 1`] = `"ujNGPLhLfn"`;

exports[`Monochrome image generation > using '20x86' raw data scaled by 2 with frameMode 'crop' > generates expected hash for raw image data 1`] = `"vVfl7TJX14"`;

exports[`Monochrome image generation > using '20x86' raw data scaled by 2 with frameMode 'keep' > generates expected dimensions 1`] = `
{
  "height": 688,
  "width": 320,
}
`;

exports[`Monochrome image generation > using '20x86' raw data scaled by 2 with frameMode 'keep' > generates expected hash for fullParams 1`] = `"lK02RXFkBL"`;

exports[`Monochrome image generation > using '20x86' raw data scaled by 2 with frameMode 'keep' > generates expected hash for raw image data 1`] = `"XICBvx6tL5"`;

exports[`Monochrome image generation > using '20x86' raw data scaled by 2 with frameMode 'square_black' > generates expected dimensions 1`] = `
{
  "height": 320,
  "width": 320,
}
`;

exports[`Monochrome image generation > using '20x86' raw data scaled by 2 with frameMode 'square_black' > generates expected hash for fullParams 1`] = `"fhg9A4OJN3"`;

exports[`Monochrome image generation > using '20x86' raw data scaled by 2 with frameMode 'square_black' > generates expected hash for raw image data 1`] = `"p8bNTOi7Q0"`;

exports[`Monochrome image generation > using '20x86' raw data scaled by 2 with frameMode 'square_white' > generates expected dimensions 1`] = `
{
  "height": 320,
  "width": 320,
}
`;

exports[`Monochrome image generation > using '20x86' raw data scaled by 2 with frameMode 'square_white' > generates expected hash for fullParams 1`] = `"wGIkgugcWb"`;

exports[`Monochrome image generation > using '20x86' raw data scaled by 2 with frameMode 'square_white' > generates expected hash for raw image data 1`] = `"p8bNTOi7Q0"`;
